# rk-telegram-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Procfile  README.md  app.py  biome.json  bot.py  claude_client.py  config.py  conversations.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  transcriber.py  tsconfig.json  vitest.config.ts
docs/plans/: 2026-02-13-telegram-bot-design.md  2026-02-13-telegram-bot-implementation.md  2026-03-30-implementation-plan.md  2026-03-30-rk-bot-modernization-design.md
rk-artside-documents/: SKILL.md  TEMPLATE.py
rk-artside-documents/references/: patterns.md
scripts/: build.ts  set-webhook.ts  set_webhook.py
skill/: TEMPLATE.py
src/: app.ts  config.ts  index.ts  logger.ts
src/bot/: callbacks.ts  commands.ts  handler.ts  keyboards.ts  safe-send.ts  session.ts
src/db/: client.ts
src/services/: claude.ts  conversation.ts  transcriber.ts
tests/: claude.test.ts  config.test.ts  conversation.test.ts  db.test.ts  handler.test.ts  session.test.ts  test_app.py  test_bot.py  test_claude_client.py  test_config.py  test_conversations.py
