[project]
name = "rkbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.6",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
    "psycopg[binary]>=3.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
